--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
       border-radius: var(--border-radius);
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       width: 100%;
-      display: flex;
-      flex-direction: column;
       gap: 20px;
     }
     .form-group {
@@ -136,7 +134,7 @@
     .card-image { flex: 1; display: flex; align-items: center; justify-content: center; min-height: 120px; }
     .card-image img { max-width: 90%; max-height: 100%; border-radius: 10px; object-fit: contain; }
     .card-phrase { font-style: italic; font-size: 1rem; min-height: 60px; display: flex; align-items: center; justify-content: center; }
-    .card-instructions { background: var(--color-panel); color: var(--color-light); font-size: 0.9rem; display: flex; align-items: center; justify-content: center; border-radius: 0; padding: 15px; }
+    .card-instructions { background: var(--color-panel); color: var(--color-light); font-size: 0.9rem; display: flex; align-items: center; justify-content: center; padding: 15px; }
     .card-instructions .text { text-align: center; white-space: normal; word-break: break-word; }
     .card-instructions .icon { width: 40px; height: 40px; margin-left: 10px; flex-shrink: 0; }
     .card-instructions .icon img { width: 100%; height: 100%; object-fit: contain; }
@@ -144,6 +142,43 @@
     .card-corner-icon img { width: 100%; height: 100%; object-fit: contain; }
     .export-btn { margin-top: 20px; padding: 10px 20px; font-size: 1rem; background: var(--color-accent); color: #fff; border: none; border-radius: 5px; cursor: pointer; transition: background 0.2s; }
     .export-btn:hover { background: #d97a2a; }
+
+    /* 1) Cambio a columna en móviles
+       2) Labels encima de inputs para que no se rompan */
+    @media (max-width: 768px) {
+      #main-content {
+        flex-direction: column;
+        gap: 20px;
+      }
+      form#card-form,
+      .card-container {
+        max-width: 100%;
+        width: 100%;
+      }
+      .card-container {
+        margin-top: 20px;
+      }
+      /* Inputs a 100% */
+      .form-group {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .form-group label {
+        text-align: left;
+        min-width: 0;
+        width: auto;
+        margin-bottom: 5px;
+      }
+      .form-group input[type="text"],
+      .form-group textarea,
+      .form-group input[type="file"] {
+        width: 100%;
+      }
+      .card {
+        width: 90vw;
+        max-width: var(--card-width);
+      }
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
@@ -189,11 +224,20 @@
     </form>
     <div class="card-container">
       <div class="card" id="card">
-        <div class="card-corner-icon" id="corner-icon"><img src="assets/cacahuete.png" alt="Icono Esquina" id="img-corner"></div>
+        <div class="card-corner-icon" id="corner-icon">
+          <img src="assets/cacahuete.png" alt="Icono Esquina" id="img-corner">
+        </div>
         <div class="card-section card-title" id="card-title">Título de la Carta</div>
-        <div class="card-section card-image"><img id="card-img" src="assets/Pablo1.JPG" alt="Imagen Carta"></div>
+        <div class="card-section card-image">
+          <img id="card-img" src="assets/Pablo1.JPG" alt="Imagen Carta">
+        </div>
         <div class="card-section card-phrase" id="card-phrase">"Frase de la Carta"</div>
-        <div class="card-section card-instructions"><div class="text" id="card-instructions">Instrucciones de la carta</div><div class="icon" id="instr-icon"><img src="assets/cacahuete.png" alt="Icono Instrucción" id="img-instruction"></div></div>
+        <div class="card-section card-instructions">
+          <div class="text" id="card-instructions">Instrucciones de la carta</div>
+          <div class="icon" id="instr-icon">
+            <img src="assets/cacahuete.png" alt="Icono Instrucción" id="img-instruction">
+          </div>
+        </div>
       </div>
       <button class="export-btn" onclick="exportCard()">Exportar como PNG</button>
     </div>
@@ -215,14 +259,33 @@
         document.documentElement.style.setProperty('--color-accent', p.accent);
       });
     });
-    document.getElementById('title-input').addEventListener('input', e => { document.getElementById('card-title').innerText = e.target.value || 'Título de la Carta'; });
-    document.getElementById('phrase-input').addEventListener('input', e => { document.getElementById('card-phrase').innerText = e.target.value ? `"${e.target.value}"` : '"Frase de la Carta"'; });
-    document.getElementById('instructions-input').addEventListener('input', e => { document.getElementById('card-instructions').innerText = e.target.value || 'Instrucciones de la carta'; });
-    document.getElementById('file-main').addEventListener('change', e => { const file = e.target.files[0]; if(file) document.getElementById('card-img').src = URL.createObjectURL(file); });
-    document.getElementById('toggle-corner').addEventListener('change', e => { document.getElementById('corner-icon').style.display = e.target.checked ? 'block' : 'none'; });
-    document.getElementById('toggle-instruction').addEventListener('change', e => { document.getElementById('instr-icon').style.display = e.target.checked ? 'flex' : 'none'; });
-    document.getElementById('file-corner').addEventListener('change', e => { const file = e.target.files[0]; if(file) document.getElementById('img-corner').src = URL.createObjectURL(file); });
-    document.getElementById('file-instruction').addEventListener('change', e => { const file = e.target.files[0]; if(file) document.getElementById('img-instruction').src = URL.createObjectURL(file); });
+    document.getElementById('title-input').addEventListener('input', e => {
+      document.getElementById('card-title').innerText = e.target.value || 'Título de la Carta';
+    });
+    document.getElementById('phrase-input').addEventListener('input', e => {
+      document.getElementById('card-phrase').innerText = e.target.value ? `"${e.target.value}"` : '"Frase de la Carta"';
+    });
+    document.getElementById('instructions-input').addEventListener('input', e => {
+      document.getElementById('card-instructions').innerText = e.target.value || 'Instrucciones de la carta';
+    });
+    document.getElementById('file-main').addEventListener('change', e => {
+      const file = e.target.files[0];
+      if (file) document.getElementById('card-img').src = URL.createObjectURL(file);
+    });
+    document.getElementById('toggle-corner').addEventListener('change', e => {
+      document.getElementById('corner-icon').style.display = e.target.checked ? 'block' : 'none';
+    });
+    document.getElementById('toggle-instruction').addEventListener('change', e => {
+      document.getElementById('instr-icon').style.display = e.target.checked ? 'flex' : 'none';
+    });
+    document.getElementById('file-corner').addEventListener('change', e => {
+      const file = e.target.files[0];
+      if (file) document.getElementById('img-corner').src = URL.createObjectURL(file);
+    });
+    document.getElementById('file-instruction').addEventListener('change', e => {
+      const file = e.target.files[0];
+      if (file) document.getElementById('img-instruction').src = URL.createObjectURL(file);
+    });
     function exportCard() {
       const card = document.getElementById('card');
       const { offsetWidth: width, offsetHeight: height } = card;
