--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       }
       .card-title {
         font-size: 1.4rem;
+        font-weight: bold;
         padding: 10px 30px;
         margin: 0;
       }
@@ -136,6 +137,7 @@
       }
       .card-phrase {
         font-style: italic;
+        font-weight: bold;
         font-size: 1rem;
         min-height: 60px;
         display: flex;
